@@ -9,7 +9,6 @@ import org.springframework.messaging.MessageChannel;
 import shared.dto.order.orchestration.OrderOrchestrationPartDto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 public class MessageOrchestrationConfig {
@@ -23,7 +22,7 @@ public class MessageOrchestrationConfig {
         return IntegrationFlow.from("aggregatorChannel")
             .aggregate(aggregatorSpec ->
                 aggregatorSpec
-                    .correlationExpression("payload.orderId")
+                    .correlationExpression("payload.orderAggregationId")
                     .releaseExpression("size() == 2")
                     .groupTimeout(10000)
                     .expireGroupsUponCompletion(true)
@@ -31,7 +30,7 @@ public class MessageOrchestrationConfig {
                         final List<OrderOrchestrationPartDto> orderParts = group.getMessages()
                             .stream()
                             .map(message -> (OrderOrchestrationPartDto) message.getPayload())
-                            .collect(Collectors.toList());
+                            .toList();
                         return orderAggregatorService.aggregate(orderParts);
                     }))
             .handle("orderService", "createOrder").get();
